# databricks-mcp-server

./: .cursor.json  .env.example  .gitignore  README.md  SUMMARY.md  project_structure.md  pyproject.toml  requirements.txt  run_api_server.py  run_mcp_server.py  setup.py  start_mcp_server.ps1  start_mcp_server.sh
.cursor/rules/: databricks_api.mdc  documentation.mdc  environment.mdc  mcp_tools.mdc  project_structure.mdc  python_conventions.mdc  testing.mdc
documents/: phase1.md
examples/: README.md  direct_usage.py  mcp_client_usage.py
scripts/: run_client_test.ps1  run_direct_test.ps1  run_direct_test.sh  run_list_tools.ps1  run_list_tools.sh  run_mcp_client_test.ps1  run_mcp_client_test.sh  run_mcp_test.ps1  run_tests.ps1  show_clusters.py  show_notebooks.py  start_mcp_server.ps1  start_server.ps1  test_mcp_server.ps1
src/: __init__.py  __main__.py  main.py
src/api/: __init__.py  clusters.py  dbfs.py  jobs.py  notebooks.py  sql.py
src/cli/: commands.py
src/core/: __init__.py  auth.py  config.py  utils.py
src/server/: __init__.py  __main__.py  app.py  databricks_mcp_server.py  mcp_server.py  middleware.py  routes.py
src/server/routers/: __init__.py  clusters.py
tests/: README.md  __init__.py  test_clusters.py  test_direct.py  test_mcp_client.py  test_mcp_server.py  test_tools.py  test_validation.py
