[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-mcp-server"
version = "0.1.0"
description = "A Model Completion Protocol (MCP) server for Databricks"
authors = [
    {name = "MCP Server Team", email = "example@example.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx",
    "databricks-sdk",
]

[project.optional-dependencies]
cli = [
    "click",
]
dev = [
    "black",
    "pylint",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
databricks-mcp = "src.cli.commands:main"

[tool.hatch.build.targets.wheel]
packages = ["src"] 
